use bytes + toc